maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: ')' expected but 'return' found.
				return false
                                ^